# katac

./: Cargo.toml  Dockerfile  Dockerfile.tests  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  install.sh  katac.json  katas.toml
.github/workflows/: pipeline.yml  release.yml  rust.yml  tests.yml
docs/: contributing.md  demo.tape  tutorial.md  tutorial.tape  usage.md
example-implementations/go/ArrayList/: ArrayList.go
example-implementations/go/BinarySearchList/: BinarySearchList.go
example-implementations/go/DoublyLinkedList/: DoublyLinkedList.go
example-implementations/go/LRU/: LRU.go
example-implementations/go/Map/: Map.go  dsa.go
example-implementations/go/Queue/: Queue.go
example-implementations/go/RingBuffer/: RingBuffer.go  RingBuffer_test.go
example-implementations/go/Trie/: Trie.go  Trie_test.go
example-implementations/go/TwoCrystalBalls/: TwoCrystalBalls.go
example-implementations/go/UnionFind/: UnionFind.go  go.mod
example-implementations/python/: dsa_base.py
example-implementations/python/ArrayList/: array_list.py  test_array_list.py
example-implementations/python/BinarySearchList/: Makefile  binary_search.py  test_binary_search.py
example-implementations/python/DoublyLinkedList/: Makefile  doubly_linked_list.py
example-implementations/python/LRU/: Makefile  (+2 more)
katas/hello_world/: hello.go
src/: args.rs  commands.rs  config.rs  config_file.rs  lib.rs  main.rs  repos.rs  state_file.rs  workspaces.rs
src/files/: global_config_file.rs  global_katas_file.rs  local_config_file.rs  mod.rs
tests/: integration_tests.rs  path.rs
(+35 files in other folders)
