[package]
name = "katac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.11.0"
fs_extra = "1.3.0"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"

[[bin]]
name = "katac"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.13"
