[package]
name = "katac"
version = "0.1.2"
edition = "2021"
description = "A simple command-line application to streamline the process of practicing coding katas"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aldevv/katac"
homepage = "https://github.com/aldevv/katac"
readme = "README.md"
keywords = ["kata", "coding", "practice", "cli"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
dialoguer = "0.11"
env_logger = "0.11.0"
fs_extra = "1.3.0"
include_dir = "0.7"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"

[[bin]]
name = "katac"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.13"
clippy = "0.0.302"
rustfmt = "0.10.0"
